test: write tests for data:bible
Included tests to lock the behaviour of data:bible so that no regressions occur later.